Add Security with Ratchet Rotation + HMAC + JWT + MasterToken + DeviceToken and add smart worker to more speed up request and process data using parallel processing
